--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,36 @@
 services:
+  api:
+    build: .
+    container_name: api
+    env_file:
+      - ${ENV_FILE:-env.development}
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+
   db:
     image: postgres:16
+    container_name: db
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: microloans
-    ports:
-      - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d microloans"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
-
-  api:
-    build: .
-    environment:
-      FLASK_ENV: development
-      DATABASE_URL: postgresql+psycopg2://postgres:postgres@db:5432/microloans
-      PORT: 8000
-      PYTHONPATH: /app
-    depends_on:
-      db:
-        condition: service_healthy
     ports:
-      - "8000:8000"
-    command: gunicorn -w 2 -b 0.0.0.0:8000 wsgi:app
+      - "5432:5432"
+
+  proxy:
+    image: nginx:1.26
+    container_name: proxy
+    depends_on:
+      - api
+    ports:
+      - "${HTTPS_HOST_PORT:-443}:443"
+      - "${HTTP_HOST_PORT:-80}:80"
+    volumes:
+      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/certs:/etc/nginx/certs:ro
 
 volumes:
   db_data:
