--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ main ]
 
+
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -26,9 +31,7 @@ jobs:
     needs: test
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+    # YEH LINE REMOVE KAR - permissions yahan se hata do
     steps:
       - uses: actions/checkout@v4
       
