--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,7 +6,6 @@ on:
   pull_request:
     branches: [ main ]
 
-
 permissions:
   contents: read
   packages: write
@@ -31,16 +30,16 @@ jobs:
     needs: test
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    # YEH LINE REMOVE KAR - permissions yahan se hata do
     steps:
       - uses: actions/checkout@v4
       
+     
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_PAT }}  
           
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
